--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>To mandate or not to mandate? Vaccine Mandate Attributes Scorecard</title>
+  <title>To mandate or not to mandate? Vaccine Mandate DCE Attributes Scorecard</title>
   <!-- Link to external CSS file -->
   <link rel="stylesheet" href="styles.css" />
   <!-- Google Fonts -->
