--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <li>Allocate a total of <strong>100 points</strong> among the following attributes to indicate their importance.</li>
         <li>Higher scores indicate greater importance when choosing a preferred vaccine mandate.</li>
         <li>If you do not consider an attribute relevant, please assign it <strong>0 points</strong> so that the total equals 100.</li>
-        <li>Provide any feedback or suggestions in the comment box for each attribute.</li>
+        <li>Provide any feedback or suggestions in the comment box for each attribute when relevant.</li>
         <li>If additional features affect your choice, please list them in the "Other" category at the end.</li>
       </ul>
     </div>
