--- a/index.html
+++ b/index.html
@@ -211,8 +211,7 @@
               </span>
             </td>
             <td>
-              <strong>Description:</strong> Please describe any additional features or factors that should be considered.<br>
-              <em>Rationale:</em> This field allows you to list other important attributes that may affect your decision.
+              <strong>Description:</strong> Please include any additional features or factors that should be considered and assign values.<br>
             </td>
             <td>
               <input type="number" name="points_other" min="0" max="100" required />
